--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ dependencies = [
   "django-ninja>=1.5.3",
   "ninja-put-patch-file-upload-middleware>=0.1.4",
   "pillow>=12.1.0",
+  "django-tasks>=0.11.0",
+  "phonenumbers>=9.0.22",
 ]
 
 [dependency-groups]
