bring in breast features diagram source and documentation
This is taken from the prototype:
https://github.com/NHSDigital/manage-breast-screening-prototype/blob/0569ec8a41c3df027263e2489e4c095f9d725dd0/reference/breast-diagram/breast-diagram-export-readme.md

While we could leave this in the prototype, at some point this is likely
to be archived. Including all the assets in the main repo means that:

- we will always have it available and easily discoverable
- code changes will be subject to developer code review
- all source code and assets for the service are in one repo
- any tooling / linting we have set up for the project can be run on this
  code too (although I've excluded it for the time being)

--- a/manage_breast_screening/tsconfig.json
+++ b/manage_breast_screening/tsconfig.json
@@ -6,5 +6,10 @@
     "target": "ES2015"
   },
   "include": ["**/*.js"],
-  "exclude": ["**/*.test.js", "**/compiled/**", "**/staticfiles/**"]
+  "exclude": [
+    "**/*.test.js",
+    "**/compiled/**",
+    "**/staticfiles/**",
+    "**/breast-diagram/*.js"
+  ]
 }
