ignore SVGs for secret scanning

--- a/scripts/config/gitleaks.toml
+++ b/scripts/config/gitleaks.toml
@@ -16,4 +16,4 @@ regexes = [
 ]
 
 [allowlists]
-paths = ['''.terraform.lock.hcl''', '''poetry.lock''', '''uv.lock''', '''yarn.lock''']
+paths = ['''.terraform.lock.hcl''', '''poetry.lock''', '''uv.lock''', '''yarn.lock''', '''.*\.svg''']
