--- a/.azuredevops/pipelines/delete-review-app.yml
+++ b/.azuredevops/pipelines/delete-review-app.yml
@@ -26,10 +26,15 @@ stages:
               steps:
                 - checkout: self
 
+                - bash: |
+                    TF_VERSION=$(grep "^terraform" .tool-versions | awk '{print $2}')
+                    echo "##vso[task.setvariable variable=TF_VERSION]$TF_VERSION"
+                  displayName: 'Get Terraform version from .tool-versions'
+
                 - task: TerraformInstaller@1
                   displayName: Install terraform
                   inputs:
-                    terraformVersion: 1.7.0
+                    terraformVersion: $(TF_VERSION)
 
                 - task: AzureCLI@2
                   displayName: Run terraform
