--- a/manage_breast_screening/tsconfig.json
+++ b/manage_breast_screening/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "module": "ESNext",
     "strict": true,
-    "target": "ES2015"
+    "target": "ES2015",
+    "types": ["node", "typed-query-selector"]
   },
   "include": ["**/*.js"],
   "exclude": [
