--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier": "^3.6.2",
     "rollup": "^4.57.1",
     "sass-embedded": "^1.97.3",
+    "typed-query-selector": "^2.12.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0"
   },
