--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,15 +2,19 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
-    "module": "Preserve",
+    "esModuleInterop": true,
+    "module": "ESNext",
     "moduleResolution": "Node",
     "noEmit": true,
+    "noImplicitThis": true,
     "noUnusedLocals": true,
     "skipLibCheck": true,
     "strict": false,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "target": "ESNext",
+    "types": []
   },
   "exclude": ["**/node_modules"],
   "typeAcquisition": {
