--- a/manage_breast_screening/tsconfig.json
+++ b/manage_breast_screening/tsconfig.json
@@ -10,7 +10,6 @@
   "exclude": [
     "**/*.test.js",
     "**/compiled/**",
-    "**/staticfiles/**",
-    "**/breast-diagram/*.js"
+    "**/staticfiles/**"
   ]
 }
