--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
   "phonenumbers>=9.0.22",
   "websockets>=16.0",
   "inflect>=7.5.0",
+  "jsonschema>=4.26.0",
 ]
 
 [dependency-groups]
@@ -55,7 +56,6 @@ dev = [
   "requests-mock>=1.12.1,<2",
   "pytest-cov>=7.0.0,<8",
   "djlint>=1.36.4,<2",
-  "jsonschema>=4.25.1,<5",
   "pytest-asyncio>=1.3.0",
 ]
 
