--- a/manage_breast_screening/tsconfig.json
+++ b/manage_breast_screening/tsconfig.json
@@ -7,9 +7,5 @@
     "types": ["node", "typed-query-selector"]
   },
   "include": ["**/*.js"],
-  "exclude": [
-    "**/*.test.js",
-    "**/compiled/**",
-    "**/staticfiles/**"
-  ]
+  "exclude": ["**/*.test.js", "**/compiled/**", "**/staticfiles/**"]
 }
