feat(ci): add smoke test token parameter and configuration
Adds a `smokeTestToken` parameter to the Azure DevOps pipeline and GitHub Actions workflow, allowing for a dynamic token in the deployment process. Updates the Terraform configuration to include this token and adds a WAF rule in the container apps module to bypass firewall rules using this token. Also, modifies the smoke test script to use this token.

Refs: DTOSS-12358

--- a/.azuredevops/pipelines/deploy.yml
+++ b/.azuredevops/pipelines/deploy.yml
@@ -15,6 +15,10 @@ parameters:
   - name: pool
     displayName: ADO management pool
     type: string
+  - name: smokeTestToken
+    displayName: Smoke test token
+    type: string
+    default: 'SmokeTest'
 
 stages:
   - stage: ${{ parameters.environment }}
@@ -61,6 +65,7 @@ stages:
                       export ARM_CLIENT_ID="$servicePrincipalId"
                       export ARM_OIDC_TOKEN="$idToken"
                       export ARM_USE_OIDC=true
+                      export SMOKE_TEST_TOKEN="${{ parameters.smokeTestToken }}"
                       make ci ${{ parameters.environment }} terraform-apply DOCKER_IMAGE_TAG=git-sha-${{ parameters.commitSHA }} PR_NUMBER=${{ parameters.prNumber }}
 
                 - task: AzureCLI@2
