feat(ci/stage-4-deploy.yaml, scripts/bash/container_app_smoke_test.sh): increase smoke test timeout for PR environments
Increase the smoke test timeout to accommodate Front Door certificate provisioning in PR environments. Add masking of the SMOKE_TEST_TOKEN in the CI workflow.

Refs: DTOSS-12358

--- a/.github/workflows/stage-4-deploy.yaml
+++ b/.github/workflows/stage-4-deploy.yaml
@@ -51,6 +51,7 @@ jobs:
           fi
 
           SMOKE_TEST_TOKEN=$(openssl rand -hex 16)
+          echo "::add-mask::${SMOKE_TEST_TOKEN}"
           echo "SMOKE_TEST_TOKEN=${SMOKE_TEST_TOKEN}" >> $GITHUB_ENV
 
           source "infrastructure/environments/${ENVIRONMENT}/variables.sh"
